4-kubernetes/4.9-cert-manager/4.9.2-configurando-e-emitindo-certificado/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    name: myingress
spec:
  rules:
  - host: ingress.fullcycle.com.br
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: goserver-service
            port: 
              number: 80
  tls:
  - hosts:
    - ingress.fullcycle.com.br
    secretName: letsencrypt-prod
